Customize site configuration and add content

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,11 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Poster"
 collection: talks
-type: "Talk"
+type: "Poster"
 permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+venue: "Motor Speech  2024"
+date: 2024-02-21
+location: "San Diego, CA"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+Leone-Thide, A., Cuervo Cano, M., & Buchwald, A. (2024) Investigating Speech Motor Learning within Nasal Production in Novel Consonant Clusters. Poster presented at the Conference on Motor Speech. San Diego, CA, February 2024.
