--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -1,13 +1,11 @@
 ---
-title: "Tutorial 1 on Relevant Topic in Your Field"
+title: "Talk"
 collection: talks
-type: "Tutorial"
+type: "Seminar"
 permalink: /talks/2013-03-01-tutorial-1
-venue: "UC-Berkeley Institute for Testing Science"
-date: 2013-03-01
-location: "Berkeley CA, USA"
+venue: "ASHA- 2021"
+date: 2021-11-15
+location: "Washington, DC"
 ---
 
-[More information here](http://exampleurl.com)
-
-This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+Benakis, E., Blake, O., Fareri, M., Leone-Thide, A., & Brea-Spahn, M. (2021) The Refinement Process of a Student-Supervisor Dialogue Tool to Maximize Effective Supervision. One Hour Seminar presented at the American Speech-Language-Hearing Association Convention. Washington, D.C., November 2021.
