--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -1,13 +1,14 @@
 ---
-title: "Talk 2 on Relevant Topic in Your Field"
+title: "Poster"
 collection: talks
-type: "Talk"
+type: "Poster"
 permalink: /talks/2014-02-01-talk-2
-venue: "London School of Testing"
-date: 2014-02-01
-location: "London, UK"
+venue: "Center of Health and Rehabilitation Research"
+date: 2024-04-19
+location: "New York, NY"
 ---
 
-[More information here](http://example2.com)
+Leone-Thide, A., Cuervo Cano, M., & Buchwald, A. (2024) Investigating Speech Motor Learning within Nasal Production in Novel Consonant Clusters. Poster presented at the Center of Health and Rehabilitation Research (CoHRR) Spring Showcase. New York, NY, April 2024.
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+[More information here](https://steinhardt.nyu.edu/health_and_rehabilitation)
+
