--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -1,11 +1,11 @@
 ---
-title: "Conference Proceeding talk 3 on Relevant Topic in Your Field"
+title: "Poster"
 collection: talks
-type: "Conference proceedings talk"
+type: "Poster"
 permalink: /talks/2014-03-01-talk-3
-venue: "Testing Institute of America 2014 Annual Conference"
-date: 2014-03-01
-location: "Los Angeles, CA"
+venue: "ASHA 2021"
+date: 2021-11-14
+location: "Washington, DC"
 ---
 
-This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
+Benakis, E., Blake, O., Fareri, M., Leone-Thide, A., & Brea-Spahn, M. (2021) The Impact of Full-Time Field Placements on Part-time Students: Implications for Diversity in Speech-Language Pathology. Poster presented at the American Speech-Language-Hearing Association Convention. Washington, D.C., November 2021.
