--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -8,4 +8,4 @@ date: 2024-02-21
 location: "San Diego, CA"
 ---
 
-Leone-Thide, A., Cuervo Cano, M., & Buchwald, A. (2024) Investigating Speech Motor Learning within Nasal Production in Novel Consonant Clusters. Poster presented at the Conference on Motor Speech. San Diego, CA, February 2024.
+**Leone-Thide, A.**, Cuervo Cano, M., & Buchwald, A. (2024) Investigating Speech Motor Learning within Nasal Production in Novel Consonant Clusters. Poster presented at the Conference on Motor Speech. San Diego, CA, February 2024.
