--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -8,4 +8,4 @@ date: 2021-11-15
 location: "Washington, DC"
 ---
 
-Benakis, E., Blake, O., Fareri, M., Leone-Thide, A., & Brea-Spahn, M. (2021) The Refinement Process of a Student-Supervisor Dialogue Tool to Maximize Effective Supervision. One Hour Seminar presented at the American Speech-Language-Hearing Association Convention. Washington, D.C., November 2021.
+Benakis, E., Blake, O., Fareri, M., **Leone-Thide, A.**, & Brea-Spahn, M. (2021) The Refinement Process of a Student-Supervisor Dialogue Tool to Maximize Effective Supervision. One Hour Seminar presented at the American Speech-Language-Hearing Association Convention. Washington, D.C., November 2021.
