--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -8,7 +8,5 @@ date: 2024-04-19
 location: "New York, NY"
 ---
 
-Leone-Thide, A., Cuervo Cano, M., & Buchwald, A. (2024) Investigating Speech Motor Learning within Nasal Production in Novel Consonant Clusters. Poster presented at the Center of Health and Rehabilitation Research (CoHRR) Spring Showcase. New York, NY, April 2024.
-
-[More information here](https://steinhardt.nyu.edu/health_and_rehabilitation)
+**Leone-Thide, A.**, Cuervo Cano, M., & Buchwald, A. (2024) Investigating Speech Motor Learning within Nasal Production in Novel Consonant Clusters. Poster presented at the Center of Health and Rehabilitation Research (CoHRR) Spring Showcase. New York, NY, April 2024.
 
