--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -8,4 +8,4 @@ date: 2021-11-14
 location: "Washington, DC"
 ---
 
-Benakis, E., Blake, O., Fareri, M., Leone-Thide, A., & Brea-Spahn, M. (2021) The Impact of Full-Time Field Placements on Part-time Students: Implications for Diversity in Speech-Language Pathology. Poster presented at the American Speech-Language-Hearing Association Convention. Washington, D.C., November 2021.
+Benakis, E., Blake, O., Fareri, M., **Leone-Thide, A.**, & Brea-Spahn, M. (2021) The Impact of Full-Time Field Placements on Part-time Students: Implications for Diversity in Speech-Language Pathology. Poster presented at the American Speech-Language-Hearing Association Convention. Washington, D.C., November 2021.
